--- a/style/app.css
+++ b/style/app.css
@@ -26,10 +26,13 @@ h6 {
 h1 {
   font-size: 96px;
 }
-
+h2 {
+  font-size: 64px;
+}
 p {
   font-weight: normal;
-  margin: 0;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero p {
   font-size: 36px;
@@ -49,4 +52,22 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 800px) {
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
