--- a/style/app.css
+++ b/style/app.css
@@ -25,6 +25,7 @@ h6 {
 }
 h1 {
   font-size: 96px;
+  line-height: 1.5;
 }
 h2 {
   font-size: 64px;
@@ -43,7 +44,7 @@ p {
   font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -53,6 +54,10 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+.btn-branding:hover {
+  background: var(--branding-color);
+  color: white;
+}
 .btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
@@ -61,11 +66,25 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+.btn-branding-outline:hover {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+}
 .project-description {
   padding: 120px 60px;
 }
 
 @media (max-width: 800px) {
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
   .project-description {
     padding: 0;
     text-align: center;
