--- a/style/app.css
+++ b/style/app.css
@@ -73,21 +73,28 @@ p {
 .project-description {
   padding: 120px 60px;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section-content {
+.content {
   margin: 30px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.about-section p {
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1.5;
+  margin: 20px 0 0;
+}
+.content p {
+  font-size: 14px;
 }
 
 @media (max-width: 800px) {
@@ -105,7 +112,7 @@ p {
     padding: 0;
     text-align: center;
   }
-  .about-section {
+  .content {
     padding: 0;
     text-align: center;
   }
