--- a/style/app.css
+++ b/style/app.css
@@ -7,6 +7,22 @@
 body {
   font-family: var(--default-font-family);
 }
+.logo {
+  max-height: 40px;
+}
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
 .hero {
   background: var(--secondary-color);
   text-align: center;
