--- a/style/app.css
+++ b/style/app.css
@@ -123,6 +123,44 @@ p {
 .content p {
   font-size: 14px;
 }
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer h4 {
+  font-size: 48px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .email-link {
+  color: black;
+  font-size: 24px;
+  text-align: center;
+  text-decoration: none;
+}
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
 
 @media (max-width: 768px) {
   h1 {
