--- a/style/app.css
+++ b/style/app.css
@@ -37,7 +37,7 @@ nav li {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 /* font-family: "Playfair Display", serif;
 font-family: "Poppins", sans-serif; */
@@ -101,7 +101,7 @@ p {
   padding: 120px 60px;
 }
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .content {
   margin: 30px;
@@ -132,7 +132,7 @@ footer .contact-box {
   padding: 30px 120px;
   border-radius: 10px;
 }
-footer h4 {
+footer h3 {
   font-size: 48px;
 }
 footer .contact-box p {
@@ -161,7 +161,9 @@ footer .social-links a:hover {
   color: white;
   background: var(--branding-color);
 }
-
+.git-rep {
+  color: var(--branding-color);
+}
 @media (max-width: 768px) {
   nav a {
     font-size: 16px;
@@ -172,10 +174,6 @@ footer .social-links a:hover {
   }
   h2 {
     font-size: 44px;
-  }
-
-  .hero {
-    padding: 80px 20px;
   }
   .project-description {
     padding: 0;
